spacing correction

--- a/Components/3-column-preview-card-wc/css/styles.css
+++ b/Components/3-column-preview-card-wc/css/styles.css
@@ -123,4 +123,8 @@ body {
 
     /* overflow: hidden; */
   }
+
+  .card__body {
+    margin-bottom: 5em;
+  }
 }
